Fix band bio scroll on small devices

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -225,6 +225,7 @@ i.member-credentials {
 	}
 
 	.band {
+		overflow-y: auto;
 		background-size: auto 100%;
 	}
 }
